# homsl

./: .gitignore  benchmark.html  cabal.project  dump  homsl.cabal  results
benchmarks/Bebop/No/: s100.hrs  s2.hrs  s20.hrs  t100.hrs  t200.hrs
benchmarks/Bebop/Yes/: t2.hrs  t400.hrs
benchmarks/Flow/Yes/: cfa-life2.hrs
benchmarks/GTRecS/No/: exp2-5-wrong.hrs  twofiles-wrong.hrs
benchmarks/GTRecS/Yes/: example1.hrs  exp2-100.hrs  exp2-10000.hrs  exp2-15.hrs  exp2-1600.hrs  exp2-3.hrs  exp2-800.hrs  exp3-1.hrs  exp3-10.hrs  exp3-15.hrs  exp3-1600.hrs  exp3-200.hrs  exp3-3.hrs  exp3-3200.hrs  exp3-400.hrs  exp3-800.hrs  exp4-10.hrs  exp4-100.hrs  exp4-15.hrs  exp4-2.hrs  exp4-20.hrs  exp4-200.hrs  exp4-3.hrs  exp4-30.hrs  exp4-3200.hrs  exp4-50.hrs  exp4-6400.hrs  exp5-10.hrs  exp5-3200.hrs  exp5-6400.hrs  lock2.hrs  twofiles-4.hrs
benchmarks/HoRS/: Parser.hs
benchmarks/HorSat/Yes/: dna.hrs  fibstring.hrs  fold_fun_list.hrs  l.hrs  specialize_cps_coerce1-c.hrs  xhtmlf-m-church.hrs  zip.hrs
benchmarks/TRecS/Yes/: fib.hrs  lock2.hrs
benchmarks/benchmarks/Bebop/No/: s1600.hrs  s2.hrs  s200.hrs  s40.hrs  s400.hrs  s800.hrs  t2.hrs
benchmarks/benchmarks/Bebop/Yes/: t100.hrs  t200.hrs
benchmarks/benchmarks/Flow/Yes/: cfa-matrix-1.hrs  cfa-psdes.hrs
benchmarks/benchmarks/GTRecS/No/: exp3-5-wrong.hrs
benchmarks/benchmarks/GTRecS/Yes/: exp2-1.hrs  exp2-10.hrs  exp2-1000.hrs  exp2-12800.hrs  exp2-2.hrs  exp2-200.hrs  exp2-3200.hrs  exp2-400.hrs  exp2-5.hrs  exp2-6400.hrs  exp3-100.hrs  exp3-2.hrs  exp3-5.hrs  exp3-6400.hrs  exp4-1.hrs  exp4-1000.hrs  exp4-1600.hrs  exp4-400.hrs  exp4-5.hrs  exp4-800.hrs  exp5-100.hrs  exp5-1600.hrs  exp5-200.hrs  exp5-400.hrs  exp5-800.hrs  fileocamlc-4.hrs  lock2-4.hrs  nondet.hrs
benchmarks/benchmarks/HorSat/No/: search-e-church.hrs  tak.hrs  xhtmlf-div-2.hrs
benchmarks/benchmarks/HorSat/Yes/: fold_right.hrs  jwig-cal_main.hrs
benchmarks/benchmarks/TRecS/No/: ex2ib.hrs
benchmarks/benchmarks/TRecS/Yes/: fileorder5-2.hrs  guess.hrs  stress.hrs
hors/: Parser.hs
hors-interface/: Main.hs
hors-interface/HoRS/: Inference.hs  Socket.hs  Syntax.hs  Translation.hs
hors-interface/socket/: Socket.hs
input/: 400.hrs  partial  s2.hrs  socket  test.hrs
sockets/: Socket.hs
src/: Binder.hs  Parser.hs  Resolve.hs  Socket.hs  Syntax.hs
src/Control/Monad/: Memoization.hs
src/HoMSL/: ClauseSet.hs  IdEnv.hs  Parser.hs  Resolve.hs  Rewrite.hs  Rewrite_old.hs  Syntax.hs
src/HoMSL/Syntax/: Formula.hs  Parser.hs  Subst.hs  Term.hs
test/: Main.hs  test
