cabal-version:      3.0
name:               homsl
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
category:           Verification

library
  exposed-modules:    HoMSL.Rewrite,
                      HoMSL.Syntax,
                      HoMSL.Syntax.Parser

  other-modules:      HoMSL.Syntax.Term,
                      HoMSL.Syntax.Formula,
                      HoMSL.Syntax.Subst,
                      Control.Monad.Memoization

  hs-source-dirs:     src

  build-depends:      base,
                      mtl,
                      hashable,
                      unordered-containers,
                      logict,
                      parsec,

  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmissing-export-lists
                      -Wpartial-fields
                      -Wmissing-deriving-strategies
                      -Wunused-packages

                      -Wno-unused-matches
                      -Wno-unused-local-binds
                      -Wno-name-shadowing

  default-extensions: DerivingVia
                      DeriveTraversable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      DeriveAnyClass

                      OverloadedRecordDot
                      NoFieldSelectors
                      RecordWildCards
                      DisambiguateRecordFields

                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      InstanceSigs                   
  
  default-language: Haskell2010

executable hors-interface
  main-is:          Main.hs

  hs-source-dirs:   hors-interface

  build-depends:    base,
                    mtl,
                    containers,
                    unordered-containers,
                    homsl,
                    directory,
                    parsec,
                    criterion

  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmissing-export-lists
                    -Wpartial-fields
                    -Wmissing-deriving-strategies
                    -Wunused-packages

                    -Wno-unused-matches
                    -Wno-name-shadowing
                    -Wno-unused-local-binds
  
  default-language: Haskell2010